--- a/cyber-events/src/components/EventsCarousel/EventsCarousel.module.css
+++ b/cyber-events/src/components/EventsCarousel/EventsCarousel.module.css
@@ -1,8 +1,8 @@
 .container {
-    background-image: url('../../img/card_img1.svg');
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 10px;
+    margin-top: 25px;
 }
 
 .contentWrapper {
