--- a/cyber-events/src/components/EventsCarousel/EventsCarousel.module.css
+++ b/cyber-events/src/components/EventsCarousel/EventsCarousel.module.css
@@ -2,7 +2,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 10px;
-    margin-top: 25px;
+    margin: 25px 0 0 10px;
 }
 
 .contentWrapper {
